<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_counter"
            android:icon="@drawable/player"
            android:title="@string/counter" />
        <item
            android:id="@+id/nav_Teams"
            android:icon="@drawable/balon2"
            android:title="@string/teams" />
        <item
            android:id="@+id/nav_Matches"
            android:icon="@drawable/canasta"
            android:title="@string/matches" />
        <item
            android:id="@+id/nav_NBA"
            android:icon="@drawable/balon3"
            android:title="@string/nbateams" />
    </group>


</menu>
